Validacion Cuadre de Pda Servicio de Transaccion